Fixed the position of the nav bar at the top. added margin-top to content to avoid having it clipped

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   margin: auto;
+  margin-top: 120px;
 }
 
 header h2 {
