--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,6 +10,9 @@ nav {
   justify-content: space-between;
   align-items: center;
 
+  position: fixed;
+  top: 0;
+
 }
 
 nav span {
